# example-prometheus-rust

./: Cargo.toml  README.md
src/: main.rs
src/metrics/: mod.rs  service.rs
