[package]
name = "example-prometheus-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
prometheus-client = "0.22.3"
prometheus-client-derive-encode = "0.4.2"
tokio = { version = "1.39.2", features = ["full"] }
